[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resources/temp/temp_y.png" type="Texture" id=1]
[ext_resource path="res://Resources/temp/temp_b.png" type="Texture" id=2]
[ext_resource path="res://Resources/temp/temp_p.png" type="Texture" id=3]
[ext_resource path="res://Kitchen.gd" type="Script" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="TableTexture" type="TextureRect" parent="."]
margin_top = 207.0
margin_right = 1200.0
margin_bottom = 808.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToastTexture" type="TextureRect" parent="."]
margin_left = 498.0
margin_top = 425.0
margin_right = 667.0
margin_bottom = 559.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EggButton" type="TextureButton" parent="."]
margin_left = 156.0
margin_top = 274.0
margin_right = 284.0
margin_bottom = 402.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AvocadoButton" type="TextureButton" parent="."]
margin_left = 850.0
margin_top = 271.0
margin_right = 978.0
margin_bottom = 399.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButterButton" type="TextureButton" parent="."]
margin_left = 154.0
margin_top = 564.0
margin_right = 282.0
margin_bottom = 692.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JamButton" type="TextureButton" parent="."]
margin_left = 856.0
margin_top = 569.0
margin_right = 984.0
margin_bottom = 697.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="EggButton" to="." method="_on_EggButton_pressed"]
[connection signal="pressed" from="AvocadoButton" to="." method="_on_AvocadoButton_pressed"]
[connection signal="pressed" from="ButterButton" to="." method="_on_ButterButton_pressed"]
[connection signal="pressed" from="JamButton" to="." method="_on_JamButton_pressed"]
